Use List.of and formatting